Prevent jumping around when switching between photos with and without metadata

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,6 +97,7 @@ body {
 }
 
 #files-display-details {
+    min-height: 26px;
     margin-bottom: 15px;
 }
 
